tests/neg-custom-args/i2673.scala
package Foos

class Foo
class foo // error
